# aaoca_ivus_analysis

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  pyproject.toml
src/: main.py
src/advanced_visualizations/: deformation_heatmap.py  plot_frame_diff.py  write_obj.py
src/data_io/: global_data.py  patient_data.py
src/preprocessing/: contour_measurements.py  patient_preprocessing.py
src/stats/: contour_measurements.py  global_stats.py  patient_preprocessing.py  patient_stats.py  plots.py
